--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,10 @@ on:
       - 'main'
     tags:
       - 'v*'
+
+    pull_request:
+      branches:
+        - 'main'
       
 jobs:
   build:
@@ -15,12 +19,21 @@ jobs:
     -
       name: Checkout 
       uses: actions/checkout@v2
+    #-
+    #  name: Login to Docker Hub
+    #  uses: docker/login-action@v1
+    #  with:
+    #    username: ${{ secrets.DOCKER_HUB_USERNAME }}
+    #    password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
     -
-      name: Login to Docker Hub
+      name: Login with Docker Container
+      if: github.event_name != 'pull_request'
       uses: docker/login-action@v1
       with:
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
     -
       name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
@@ -32,6 +45,7 @@ jobs:
         file: ./Dockerfile
         builder: ${{ steps.buildx.outputs.name }}
         push: true
-        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/simplewhale:latest
+        #tags: ${{ secrets.DOCKER_HUB_USERNAME }}/simplewhale:latest
+        tags: ghcr.io/${{ github.repository_owner }/simplewhale:latest
         cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/simplewhale:buildcache
         cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/simplewhale:buildcache,mode=max
