--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -12,8 +12,10 @@ jobs:
     runs-on: ubuntu-latest
   
     steps:
+      - name: Adding Known Hosts
+        run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+
       - name: Install SSH Key
         uses: shimataro/ssh-key-action@v2
         with:
-          key: ${{ secrets.SSH_PRIVATE_KEY }} 
-          known_hosts: 'random_link'
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
