--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -39,5 +39,5 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           script: |
             cd /var/www/${{ secrets.PROJECT_FOLDER }}
-            docker-compose -f docker-compose.yml -f docker-compose.prod.yml up --build --no-deps -d ${{ secrets.APP_NAME }}
+          #  docker-compose -f docker-compose.yml -f docker-compose.prod.yml up --build --no-deps -d ${{ secrets.APP_NAME }}
             
