--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -37,8 +37,7 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SSH_PORT }}
-          script: whoami
-          #script: |
-          #  cd /var/www/${{ secrets.PROJECT_FOLDER }}
-          #  docker-compose -f docker-compose.yml -f docker-compose.prod.yml up --build --no-deps -d ${{ secrets.APP_NAME }}
+          script: |
+           cd /var/www/${{ secrets.PROJECT_FOLDER }}
+           docker-compose -f docker-compose.yml -f docker-compose.prod.yml up --build --no-deps -d ${{ secrets.APP_NAME }}
             
