--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -34,10 +34,10 @@ jobs:
         uses: fifsky/ssh-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
+          user: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SSH_PORT }}
-          script: |
+          command: |
            cd /var/www/${{ secrets.PROJECT_FOLDER }}
            docker-compose -f docker-compose.yml -f docker-compose.prod.yml up --build --no-deps -d ${{ secrets.APP_NAME }}
             
