--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,13 +3,13 @@ name: ci
 on:
   push:
     branches:
-      - 'main'
+      - 'test'
     tags:
       - 'v*'
 
     pull_request:
       branches:
-        - 'main'
+        - 'test'
       
 jobs:
   build:
