--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -38,5 +38,8 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SSH_PORT }}
           command: |
-            cd /var/www/${{ secrets.PROJECT_FOLDER }}
-            docker-compose -f docker-compose.yml -f docker-compose.prod.yml up --build --no-deps -d ${{ secrets.APP_NAME }}
+            rm -rf /var/www/${{ secrets.PROJECT_FOLDER }}
+            cd /var/www
+            mkdir ${{ secrets.PROJECT_FOLDER }}
+            cp ${{ secrets.PROJECT_FOLDER }}-new-version/* ${{ secrets.PROJECT_FOLDER }}/
+          #  docker-compose -f docker-compose.yml -f docker-compose.prod.yml up --build --no-deps -d ${{ secrets.APP_NAME }}
