--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -42,4 +42,5 @@ jobs:
             cd /var/www
             mkdir ${{ secrets.PROJECT_FOLDER }}
             mv ${{ secrets.PROJECT_FOLDER }}-new-version/* ${{ secrets.PROJECT_FOLDER }}/
+            cd ${{ secrets.PROJECT_FOLDER }}
             docker-compose -f docker-compose.yml -f docker-compose.prod.yml up --build --no-deps -d ${{ secrets.APP_NAME }}
