--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -44,4 +44,4 @@ jobs:
             mv new-version/* current/
             rm -rf new-version
             cd current
-          #  docker-compose -f docker-compose.yml -f docker-compose.prod.yml --env-file ./../config-env/.env up --build --no-deps -d ${{ secrets.APP_NAME }}
+            docker-compose -f docker-compose.yml -f docker-compose.prod.yml --env-file ./../config-env/.env up --build --no-deps -d ${{ secrets.APP_NAME }}
